--- a/Tarea01/Main.tex
+++ b/Tarea01/Main.tex
@@ -656,7 +656,7 @@ Recuerde que $P_{n}(\mathbb{R}) = \{ a_0 +  a_1x +  a_2x^2 + \cdots +  a_n x^n \
 	¿Cuáles de los siguientes conjuntos son bases para $\mathbb{R}^{3}$?
 \end{ejercicio}
 	\begin{definition}
-		Una \textbf{base} $ \beta $ de $ \mathcal{V} $ espacio vectorial es un subconjunto de $ \mathcal{V} \tq \beta$  genera a $ \mathcal{V} $ y $ \beta $ es linealmente independiente
+		Una \textbf{base} $ \beta $ de $ \V $ espacio vectorial es un subconjunto de $ \mathcal{V} \tq \beta$  genera a $ \V $ y $ \beta $ es linealmente independiente
 	\end{definition}
 
 	a)  $S = \lbrace (1,0,-1),(2,5,1),(0,-4,3) \rbrace$
