--- a/TareaExamen/1parcial/Tarea-ExamenI.tex
+++ b/TareaExamen/1parcial/Tarea-ExamenI.tex
@@ -257,7 +257,7 @@ Sean $ \alpha_1, \alpha_2, \alpha_3 \in \R $
 	\alpha_1(1 + 0x + 0x^2) + \alpha_2(0 + x + 0x^2) + \alpha_3(0 + 0x + x^2) &= \vec{0} && \text{$ \beta $ como combinación lineal}\\
 	\alpha_1(1 + 0x + 0x^2) + \alpha_2(0 + x + 0x^2) + \alpha_3(0 + 0x + x^2) &= 0 + 0x + 0x^2 && \text{Por definición de $ \vec{0} \in \Po $}\\
 	(1\alpha_1 + 0\alpha_1x + 0\alpha_1x^2) + (0\alpha_2 + \alpha_2x + 0\alpha_2x^2) + (0\alpha_3 + 0\alpha_3x + \alpha_3x^2) &= 0 + 0x + 0x^2  && \text{Distribuyendo}\\
-	(\alpha_1 + 0\alpha_2 + 0\alpha_3) + (0\alpha_1 + \alpha_2 + 0\alpha_3)x + (0\alpha_1 + 0\alpha_2 + \alpha_3)x^2 &= 0 + 0x + 0x^2 && \text{Agrupando}\\
+	(\alpha_1 + 0\alpha_2 + 0\alpha_3) + (0\alpha_1 + \alpha_2 + 0\alpha_3)x + (0\alpha_1 + 0\alpha_2 + \alpha_3)x^2 &= 0 + 0x + 0x^2 && \text{Agrupando}
 \end{align*}
 Finalmente igualemos entrada con entrada
 \begin{align*}
@@ -284,12 +284,34 @@ Finalmente es fácil observar que
 	$ \therefore \qquad \beta$ es base para $ \Po $
 \end{center}
 \noindent3. Muestre que la siguiente transformación es lineal.
-
 \begin{align*}
      T \colon & \mathbb{P}_{2}(\mathbb{R})  \longrightarrow \mathbb{P}_{2}(\mathbb{R}) \\
-     & T(f(x)) \mapsto  xf^{'}(x) +x f(2) + f(3). \\
+     & T(f(x)) \mapsto  xf^{'}(x) +x f(2) + f(3).
  \end{align*}
-
+Como el dominio de $ T $ es $ \Po $, entonces sean $ p(x), q(x) \in \Po $, y $ \xi \in \R $ recordemos que los elementos de $ \Po $ tienen la forma
+\begin{align*}
+	p(x) & =\alpha_1 + \alpha_2x + \alpha_3x^2\\
+	q(x) & =\delta_1 + \delta_2x + \delta_3x^2
+\end{align*}
+\begin{align*}
+	\xi p(x) + q(x) &= \xi (\alpha_1 + \alpha_2x + \alpha_3x^2) + (\delta_1 + \delta_2x + \delta_3x^2) && \text{Por definición de $ p(x), q(x)$}\\
+	\xi p(x) + q(x) &=  (\xi \alpha_1 + \xi\alpha_2x + \xi\alpha_3x^2) + (\delta_1 + \delta_2x + \delta_3x^2) && \text{Distribuyendo $ \xi $}\\
+	\xi p(x) + q(x) &=  (\xi \alpha_1 + \delta_1) + (\xi\alpha_2 + \delta_2) x + (\xi\alpha_3 + \delta_3)x^2 && \text{Por definición  de la suma en $ \Po $}\\
+	T(\xi p(x) + q(x)) &= T( (\xi \alpha_1 + \delta_1) + (\xi\alpha_2 + \delta_2) x + (\xi\alpha_3 + \delta_3)x^2)) && \text{Aplicando en ambos lados T}\\
+\end{align*}
+\[ =(\xi \alpha_1 + \delta_1) + (\xi\alpha_2 + \delta_2) x + (\xi\alpha_3 + \delta_3)x^2)' +  ((\xi \alpha_1 + \delta_1) + (\xi\alpha_2 + \delta_2)(2) + (\xi\alpha_3 + \delta_3)(2)^2))+ ((\xi \alpha_1 + \delta_1) + (\xi\alpha_2 + \delta_2)(3) + (\xi\alpha_3 + \delta_3)(3)^2)) \]
+\begin{align*}
+	& =0 + (\xi\alpha_2 + \delta_2) + 2(\xi\alpha_3 + \delta_3)x +  (\xi \alpha_1 + \delta_1) + 2(\xi\alpha_2 + \delta_2) + 4(\xi\alpha_3 + \delta_3)+ (\xi \alpha_1 + \delta_1) + 3(\xi\alpha_2 + \delta_2) + 9(\xi\alpha_3 + \delta_3)\\
+	& =\xi\alpha_2 + \delta_2 + 2\xi\alpha_3x + 2\delta_3x +  \xi \alpha_1 + \delta_1 + 2\xi\alpha_2 + 2\delta_2 + 4\xi\alpha_3 + 4\delta_3 + \xi \alpha_1 + \delta_1 + 3\xi\alpha_2 + 3\delta_2 + 9\xi\alpha_3 + 9\delta_3\\
+	& =\xi\alpha_2 + 2\xi\alpha_3x + \xi\alpha_1 + 2\xi\alpha_2 + 4\xi\alpha_3 +\xi\alpha_1 + 3\xi\alpha_2 + 9\xi\alpha_3 + \delta_2 + 2\delta_3x + \delta_1 + 2\delta_2  + 4\delta_3  + \delta_1 + 3\delta_2 + 9\delta_3\\
+	& =\xi(\alpha_2 + 2\alpha_3x + \alpha_1 + 2\alpha_2 + 4\alpha_3 +\alpha_1 + 3\alpha_2 + 9\alpha_3) + \delta_2 + 2\delta_3x + \delta_1 + 2\delta_2  + 4\delta_3  + \delta_1 + 3\delta_2 + 9\delta_3\\
+	& =\xi( 2\alpha_1 + 6\alpha_2 + 13\alpha_3 + 2\alpha_3x) + \delta_2 + 2\delta_3x + \delta_1 + 2\delta_2  + 4\delta_3  + \delta_1 + 3\delta_2 + 9\delta_3\\
+	& =\xi( 2\alpha_1 + 6\alpha_2 +  \alpha_3(13 + 2x) ) + 2\delta_1 + 6\delta_2 + \delta_3(13 + 2x)\\
+	& =\xi T(p(x)) +T(q(x))\\
+\end{align*}
+\begin{center}
+	$ \therefore \qquad T $ es transformación lineal, pues hemos visto que saca escalares $ (\xi) $ y abre sumas $ p(x) + q(x) $
+\end{center}
 \noindent4. Determine el núcleo y la imagen de $T$.
 
 \noindent5. Encuentre la matriz asociada a $T$ con respecto a la base $\beta$, esto es $[T]_{\beta}$.
